--- a/日志2022.03.md
+++ b/日志2022.03.md
@@ -58,4 +58,254 @@ ql repo https://github.com/zero205/JD_tencent_scf.git "jd_|jx_|jdCookie" "backUp
 ql repo https://github.com/atyvcn/jd_scripts.git "jd_|jx_|ty_|CheckRpeat" "activity|backUp|icon" "^jd[^_]|^JD|USER|utils|function|^sign|sendNotify"
 ```
 
-## leetcode刷题——01
+## leetcode刷题——01——函数
+
+1、两整数求和
+
+https://leetcode-cn.com/problems/sum-of-two-integers/
+
+https://leetcode-cn.com/problems/add-without-plus-lcci/
+
+https://leetcode-cn.com/problems/bu-yong-jia-jian-cheng-chu-zuo-jia-fa-lcof/
+
+```C
+int add(int a, int b){
+    if(b == 0)
+        return a;
+    return add(a^b,(a&(b&0xffffffff))<<1);
+    // 为啥b加上0xffffffff后就不报错了？
+    // LC C/C++不支持负值左移，需要强制转换为无符号数
+    // return add(a^b,(unsigned int)(a&(b))<<1);
+}
+```
+2、递归乘法
+
+https://leetcode-cn.com/problems/recursive-mulitply-lcci/
+
+```C
+int multiply(int A, int B){
+    //return A*B;
+
+    // if(B==0)
+    //     return 0;
+    // int temp_a=A;
+    // if(B>0){
+    //     while(B>1){
+    //         A += temp_a;
+    //         B--;
+    //     }
+    // }else if(B<0){
+    //     while(B<-1){
+    //         A += temp_a;
+    //         B++;
+    //     }
+    // }
+    // return A;
+       
+    if (B==0)
+        return 0;
+    if (B>1)
+        return A + multiply(A, B-1);
+    else if(B<-1)
+        return A + multiply(A, B+1);
+    return A;
+
+}
+```
+
+3、Pow(x, n)
+
+https://leetcode-cn.com/problems/powx-n/
+
+```C
+double myPow(double x, int n){
+    double res = 1;
+    int i = n;
+    while(i){
+        if(i%2)
+            res *= x;
+ 
+        x *= x;
+
+        i /= 2;
+    }
+
+    // double res = 1.0;
+    // for(int i = n; i != 0; i /= 2){
+    //     if(i % 2 != 0){
+    //         res *= x;
+    //     }
+    //     x *= x;
+    // }
+
+    return  n < 0 ? 1 / res : res;
+
+}
+```
+
+4、x 的平方根 
+
+https://leetcode-cn.com/problems/sqrtx/
+
+```C
+int mySqrt(int x){
+    // return sqrt(x);
+
+    // int i=1, tmp = 1;
+    // while(tmp<46340 && i<x){
+    //     tmp++;
+    //     i = tmp*tmp;
+    // }
+    // if(i > x)
+    //     tmp--;
+    // return tmp;
+
+    // 牛顿迭代法
+    if(x == 1)
+        return 1;
+    int min = 0;
+    int max = x;
+    while(max-min>1)
+    {
+        int m = (max+min)/2;
+        if(x/m<m)
+            max = m;
+        else
+            min = m;
+    }
+    return min;
+}
+```
+
+## 刷机 Redmi AC2100
+
+### 需要的固件
+
+`ac2100 breed` breed-mt7621-xiaomi-r3g.bin
+
+`AC2100 2.0.7 旧固件` miwifi_rm2100_firmware_d6234_2.0.7.bin
+
+`OpenWRT临时固件` openwrt-21.02.2-ramips-mt7621-xiaomi_redmi-router-ac2100-initramfs-kernel.bin
+
+`Openwrt系统固件` openwrt-ramips-mt7621-xiaomi_redmi-router-ac2100-squashfs-sysupgrade.bin
+
+scp -r breed-mt7621-xiaomi-r3g.bin root@192.168.31.1:/tmp/
+
+### 1、系统降级
+
+完成路由器的基本设置(设置密码)，登录路由器管理界面，在页面右上角，系统升级的位置，选择手动升级，选择下载的`miwifi_rm2100_firmware_d6234_2.0.7.bin`旧系统固件，完成后等待系统自动重启
+
+![Snipaste_2022-03-03_17-10-30](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_17-10-30.png)
+
+### 2、开启SSH
+
+重新完成路由器基本设置，登录路由器后台，看浏览器地址连的url地址，记录stok后面的一串字符
+
+```C
+// ip可能会不一样，<stok>是一长串字符每次登录后都不一样
+http://192.168.31.1/cgi-bin/luci/;stok=<STOK>/web/home#router
+```
+
+![Snipaste_2022-03-03_14-37-53](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_14-37-53.png)
+
+使用下述代码进行注入，将`<stok>`替换为浏览器地址栏显示的值后再输入进地址栏
+
+```c
+http://192.168.31.1/cgi-bin/luci/;stok=<STOK>/api/misystem/set_config_iotdev?bssid=Xiaomi&user_id=longdike&ssid=-h%3B%20nvram%20set%20ssh_en%3D1%3B%20nvram%20commit%3B%20sed%20-i%20's%2Fchannel%3D.*%2Fchannel%3D%5C%22debug%5C%22%2Fg'%20%2Fetc%2Finit.d%2Fdropbear%3B%20%2Fetc%2Finit.d%2Fdropbear%20start%3B
+```
+
+![Snipaste_2022-03-03_14-39-10](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_14-39-10.png)
+
+输入地址，回车后，浏览器会显示`{"code":0}`
+
+![Snipaste_2022-03-03_14-42-15](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_14-42-15.png)
+
+退出再刷新浏览器重新进入管理界面，此时`<stok>`会发生变化，再通过下述代码修改root密码：
+
+![Snipaste_2022-03-03_14-43-09](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_14-43-09.png)
+
+```C
+http://192.168.31.1/cgi-bin/luci/;stok=<STOK>/api/misystem/set_config_iotdev?bssid=Xiaomi&user_id=longdike&ssid=-h%3B%20echo%20-e%20'admin%5Cnadmin'%20%7C%20passwd%20root%3B
+```
+
+![Snipaste_2022-03-03_14-44-49](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_14-44-49.png)
+
+此时能够使用ssh登录进路由器，账号为：root 密码为：admin
+
+使用CMD控制台ssh进入路由器系统(路由器IP：192.168.31.1)
+
+![Snipaste_2022-03-03_14-46-09](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_14-46-09.png)
+
+### 3、刷入breed
+
+新开一个CMD窗口，通过scp指令远程上传文件到路由器`/tmp/`文件夹
+
+![Snipaste_2022-03-03_14-54-27](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_14-54-27.png)
+
+备份路由器原来的分区文件
+
+![Snipaste_2022-03-03_15-20-03](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_15-20-03.png)
+
+```shell
+# 在路由器终端输入
+dd if=/dev/mtd0 of=/tmp/all.bin
+dd if=/dev/mtd1 of=/tmp/bootloader.bin
+dd if=/dev/mtd4 of=/tmp/eeprom.bin
+```
+
+将备份的文件下载到本地
+
+```shell
+# 在Windows的CMD控制台输入：
+scp root@192.168.31.1:/tmp/all.bin .
+scp root@192.168.31.1:/tmp/bootloader.bin .
+scp root@192.168.31.1:/tmp/eeprom.bin .
+```
+
+![Snipaste_2022-03-03_17-19-48](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_17-19-48.png)
+
+![Snipaste_2022-03-03_15-21-32](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_15-21-32.png)
+
+在路由器终端执行：
+
+```she
+mtd -r write /tmp/breed-mt7621-xiaomi-r3g.bin Bootloader
+```
+
+![Snipaste_2022-03-03_15-23-03](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_15-23-03.png)
+
+### 4、刷入临时系统
+
+如果电脑重新获取到IP后说明刷写完成并且breed引导了官方固件，断电。按住reset键（背面圆孔，用取卡针插进去）后插电等待system的蓝灯闪烁后松开reset键。
+
+用浏览器访问`192.168.1.1`进入breed恢复界面，更改环境变量，新增字段"xiaomi.r3g.bootfw", 值设置为 2,然后保存。
+
+![Snipaste_2022-03-03_15-26-44](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_15-26-44.png)
+
+![Snipaste_2022-03-03_15-28-53](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_15-28-53.png)
+
+
+
+点击固件更新，上传自己的固件(选择 `openwrt-21.02.2-ramips-mt7621-xiaomi_redmi-router-ac2100-initramfs-kernel.bin`)，点击`上传`
+
+![Snipaste_2022-03-03_17-26-15](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_17-26-15.png)
+
+![Snipaste_2022-03-03_17-29-15](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_17-29-15.png)
+
+![Snipaste_2022-03-03_17-29-35](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_17-29-35.png)
+
+### 5、刷入Openwrt
+
+重启完成之后，打开192.168.1.1，进入临时系统，用户名是root，没有密码。选择要输入的固件(`openwrt-ramips-mt7621-xiaomi_redmi-router-ac2100-squashfs-sysupgrade.bin`)
+
+![Snipaste_2022-03-03_16-08-46](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_16-08-46.png)
+
+![Snipaste_2022-03-03_16-10-20](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_16-10-20.png)
+
+不要勾选 `Keep settings and retain the current configuration`
+
+![Snipaste_2022-03-03_16-15-29](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_16-15-29.png)
+
+![Snipaste_2022-03-03_16-15-38](https://raw.githubusercontent.com/simoonp/picture/main/Redmi_AC2100/Snipaste_2022-03-03_16-15-38.png)
+
+上传后等待路由器重启
