添加新日志

--- a/日志2022.01.md
+++ b/日志2022.01.md
@@ -4,6 +4,55 @@
 
 Docker的安装文档：https://docs.docker.com/get-started/
 
+## Ubuntu安装Docker
+
+1、卸载旧docker
+
+```shell
+sudo apt-get remove docker docker-engine docker.io containerd runc
+```
+
+2、设置存储库
+
+```shell
+sudo apt-get update
+ sudo apt-get install \
+    ca-certificates \
+    curl \
+    gnupg \
+    lsb-release
+```
+
+3、添加官方密钥
+
+```shell
+ curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+
+```
+
+4、设置`stable`存储库
+
+```shell
+echo \
+  "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+  $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+```
+
+5、安装Docker引擎
+
+```shell
+ sudo apt-get update
+ sudo apt-get install docker-ce docker-ce-cli containerd.io
+```
+
+6、运行`hello world`镜像验证是否安装成功
+
+```shell
+sudo docker run hello-world
+```
+
+
+
 docker-ce 社区版docker
 
 启动docker
