--- a/日志2022.03.md
+++ b/日志2022.03.md
@@ -1022,3 +1022,340 @@ int* createTargetArray(int* nums, int numsSize, int* index, int indexSize, int* 
 }
 ```
 
+# 2022.03.07
+
+## leetcode刷题——05——排序API
+
+### 1、[排序数组](https://leetcode-cn.com/problems/sort-an-array/)
+
+```C
+/**
+ * Note: The returned array must be malloced, assume caller calls free().
+ */
+
+int cmp(const void*a, const void* b){
+    return *(int *)a - *(int *)b;
+}
+int* sortArray(int* nums, int numsSize, int* returnSize){
+    qsort(nums, numsSize, sizeof(int), cmp);
+    *returnSize = numsSize;
+    return nums;
+}
+```
+
+### 2、[多数元素](https://leetcode-cn.com/problems/majority-element/)
+
+```C
+int cmp(const void* a, const void* b){
+    return (*(int *)a) - (*(int *)b);
+}
+int majorityElement(int* nums, int numsSize){
+    qsort(nums, numsSize, sizeof(int), cmp);
+    return nums[numsSize/2];
+}
+```
+
+### 3、[存在重复元素](https://leetcode-cn.com/problems/contains-duplicate/)
+
+```C
+int cmp(const void* a, const void* b){
+    return (*(int *)a) - (*(int *)b);
+}
+int majorityElement(int* nums, int numsSize){
+    qsort(nums, numsSize, sizeof(int), cmp);
+    return nums[numsSize/2];
+}
+```
+
+### 4、[最大间距](https://leetcode-cn.com/problems/maximum-gap/)
+
+```C
+int cmp(const void* a, const void *b){
+    return (*(int *)a) - (*(int *)b);
+}
+int maximumGap(int* nums, int numsSize){
+    qsort(nums, numsSize, sizeof(int), cmp);
+    int max=0;
+    for(int i=0; i<numsSize-1; i++){
+        if(nums[i+1]-nums[i]>max){
+            max = nums[i+1]-nums[i];
+        }
+    }
+    return max;
+}
+```
+
+### 5、[按奇偶排序数组](https://leetcode-cn.com/problems/sort-array-by-parity/)
+
+```C
+/**
+ * Note: The returned array must be malloced, assume caller calls free().
+ */
+int Qua(int x){
+    return x&1;
+}
+int cmp(const void *a, const void *b){
+    return Qua(*(int *)a) - Qua(*(int *)b);
+}
+int* sortArrayByParity(int* nums, int numsSize, int* returnSize){
+    int i;
+    int *ret=(int *)malloc(sizeof(int)*numsSize);
+    for(i=0; i<numsSize; i++){
+        ret[i]=nums[i];
+    }
+    qsort(ret, numsSize, sizeof(int), cmp);
+    *returnSize = numsSize;
+    return ret;
+}
+```
+
+### 6、[最小时间差](https://leetcode-cn.com/problems/minimum-time-difference/)
+
+```C
+int cmp(const void* a, const void* b){
+    return *(int *)a - *(int *)b;
+}
+
+int min(int a, int b){
+    return a<b ? a : b;
+}
+int findMinDifference(char ** timePoints, int timePointsSize){
+    int *ret=(int *)malloc(sizeof(int)*timePointsSize);
+    int a,b,i;
+    int ans=1440;
+    for( i=0; i<timePointsSize; i++){
+        sscanf(timePoints[i], "%d:%d",&a, &b);
+        ret[i]=a*60 + b;
+    }
+
+    qsort(ret, timePointsSize, sizeof(int), cmp);
+
+    for( i=1; i<timePointsSize; i++){
+        ans=min(ans, ret[i]-ret[i-1]);
+    }
+    ans=min(ans, 1440-ret[timePointsSize-1]+ret[0]);
+    return ans;
+}
+```
+
+### 7、[三角形的最大周长](https://leetcode-cn.com/problems/largest-perimeter-triangle/)
+
+```C
+int cmp(const void* a, const *b)
+{
+    return *(int *)a - *(int *)b;
+}
+int largestPerimeter(int* nums, int numsSize){
+    // int len=0;
+    qsort(nums, numsSize, sizeof(int), cmp);
+    for(int i=numsSize-1; i>1; i--)
+        if(nums[i]<(nums[i-1]+nums[i-2]))
+            return nums[i]+nums[i-1]+nums[i-2];
+    return 0;
+}
+```
+
+### 8、[救生艇](https://leetcode-cn.com/problems/boats-to-save-people/)
+
+```C
+int cmp(const void* a, const void* b){
+    return *(int *)a - *(int *)b;
+}
+int numRescueBoats(int* people, int peopleSize, int limit){
+    qsort(people,peopleSize,sizeof(int),cmp);
+    int num=0;
+    int i;
+    int l=0,r=peopleSize-1;
+    while(l<=r){
+        if(l==r){
+            num++;
+            break;
+        }else if(people[l]+people[r]>limit){
+            num++;
+            r--;
+        }else{
+            num++;
+            l++;
+            r--;
+        }
+    }
+    return num;
+}
+```
+
+# 2022.03.11
+
+## leetcode刷题——06——贪心
+
+### 1、[两个数对之间的最大乘积差](https://leetcode-cn.com/problems/maximum-product-difference-between-two-pairs/)
+
+```C
+int cmp(const void *a, const void *b){
+    return *(int *)a - *(int *)b;
+}
+
+int maxProductDifference(int* nums, int numsSize){
+    qsort(nums, numsSize, sizeof(int), cmp);
+    return nums[numsSize-1]*nums[numsSize-2] - nums[0]*nums[1];
+}
+```
+
+### 3、[数组拆分 I](https://leetcode-cn.com/problems/array-partition-i/)
+
+```C
+int cmp(const void *a, const void *b){
+    return *(int *)a - *(int *)b;
+}
+
+int arrayPairSum(int* nums, int numsSize){
+    qsort(nums, numsSize, sizeof(int), cmp);
+    int ret = 0;
+    for(int i=0; i<numsSize; ){
+        ret += nums[i];
+        i+=2;
+    }
+    return ret;
+}
+```
+
+### 5、[摆动排序 II](https://leetcode-cn.com/problems/wiggle-sort-ii/)
+
+```C
+int cmp(const void *a, const void *b){
+    return *(int *)a - *(int *)b;
+}
+void wiggleSort(int* nums, int numsSize){
+    int *ret = (int *)malloc(sizeof(int) * numsSize);
+    for(int i=0; i<numsSize; i++)
+        ret[i]=nums[i];
+    qsort(ret, numsSize, sizeof(int), cmp);
+    int r=numsSize-1;
+    for(int i=1; i<numsSize; i+=2)
+        nums[i] = ret[r--];
+    for(int i=0; i<numsSize; i+=2)
+        nums[i] = ret[r--]; 
+}
+```
+
+### 6、[分发饼干](https://leetcode-cn.com/problems/assign-cookies/)
+
+```C
+int cmp(const void *a, const void *b){
+    return *(int *)a-*(int *)b;
+}
+int findContentChildren(int* g, int gSize, int* s, int sSize){
+    qsort(g, gSize, sizeof(int), cmp);
+    qsort(s, sSize, sizeof(int), cmp);
+    int ans=0;
+    int j=sSize-1, i=gSize-1;
+ 
+    while(i>=0 && j>=0)
+        if(s[j]>=g[i]){
+            j--;
+            i--;
+            ans++;
+        }else{
+            i--;
+        }
+    return ans;
+}
+```
+
+### 7、[最少操作使数组递增](https://leetcode-cn.com/problems/minimum-operations-to-make-the-array-increasing/)
+
+```C
+int minOperations(int* nums, int numsSize){
+    int i=0, ans=0, pre=nums[0]+1;
+    for(i=1; i<numsSize; i++){
+        if(pre < nums[i])
+            pre = nums[i]+1;
+        else{
+            ans += pre - nums[i];
+            pre++;
+        }
+    }
+    return ans;
+}
+```
+
+### 8、[使数组唯一的最小增量](https://leetcode-cn.com/problems/minimum-increment-to-make-array-unique/)
+
+```C
+int cmp(const void *a, const void *b){
+    return *(int *)a-*(int *)b;
+}
+// int min(int a, int b){
+//     return a<b ? a : b;
+// }
+// int minIncrementForUnique(int* nums, int numsSize){
+//     int * ret=(int *)malloc(sizeof(int)*numsSize);
+//     for(int i=0;i<numsSize;i++)
+//         ret[i]=nums[i];
+//     qsort(ret, numsSize, sizeof(int), cmp);
+//     int taken=0, ans=0;
+//     for(int i=1; i<numsSize; i++){
+//         if(ret[i-1]==ret[i]){
+//             taken++;
+//             ans = ans-ret[i];
+//         }else{
+//             int give=min(taken, ret[i]-ret[i-1]-1);
+//             ans += give*(give+1)/2+give*ret[i-1];
+//             taken -= give;
+//         }
+//     }
+//     if(taken>0)
+//         ans += taken*(taken+1)/2+taken*ret[numsSize-1];
+//     return ans;
+// }
+
+int minIncrementForUnique(int* nums, int numsSize){
+    int * ret=(int *)malloc(sizeof(int)*numsSize);
+    for(int i=0;i<numsSize;i++)
+        ret[i]=nums[i];
+    qsort(ret, numsSize, sizeof(int), cmp);
+    int move=0;
+    for(int i=1; i<numsSize; i++){
+        if(ret[i] <= ret[i-1]){
+            int pre=ret[i];
+            ret[i] = ret[i-1]+1;
+            move += ret[i] - pre;
+        }
+    }
+    return move;
+}
+```
+
+### 9、[有效三角形的个数](https://leetcode-cn.com/problems/valid-triangle-number/)
+
+```C
+int cmp(const void *a, const void *b){
+    return *(int *)a - *(int *)b;
+}
+
+int triangleNumber(int* nums, int numsSize){
+    qsort(nums, numsSize, sizeof(int), cmp);
+    int i,j,k, ans=0;
+    for(i=0; i<numsSize; i++){
+        j=i+1;
+        k=j+1;
+        while(j<numsSize){
+            while(k<numsSize){
+                if(nums[i]+nums[j] <= nums[k]){
+                    break;
+                }
+                k++;
+            }
+            ans += k-j-1;
+            j++;
+            if(k == j)
+                k++;
+        }
+    }
+    return ans;
+}
+```
+
+## leetcode刷题——07——二位数组
+
+
+
